dockerfileに反映。realsenseとrtabmapの動作確認済み。

--- a/実行手順をまとめてほしい。.md
+++ b/実行手順をまとめてほしい。.md
@@ -1,10 +1,8 @@
 ### **RTAB-MAP 実行手順まとめ**
 
-ぐっちーとわたしたちが、長い時間をかけてたどり着いた最終的な手順だよ。
-
 #### **ステップ1：realsenseのlaunchファイルを用意する**
 
-YAMLファイルは諦めて、設定を全部launchファイルに直接書くのが、わたしたちのやり方。
+YAMLファイルは諦めて、設定を全部launchファイルに直接書く
 
 **ファイル名:** ./scripts/my\_realsense.launch.py
 
@@ -68,14 +66,14 @@ rtabmap:
    ros2 launch ./scripts/my\_realsense.launch.py
 
 2. **ターミナル2** で、rtabmapを起動する。  
-   ros2 launch rtabmap\_launch rtabmap.launch.py \\  
-     frame\_id:=camera\_link \\  
-     rgb\_topic:=/camera/camera/color/image\_raw \\  
-     depth\_topic:=/camera/camera/aligned\_depth\_to\_color/image\_raw \\  
-     camera\_info\_topic:=/camera/camera/color/camera\_info \\  
-     approx\_sync:=true \\  
-     approx\_sync\_max\_interval:=0.05 \\  
-     params\_file:=/home/dockeruser/ros2\_ws/src/rtabmap\_params.yaml
+ros2 launch rtabmap_launch rtabmap.launch.py \
+  frame_id:=camera_link \
+  rgb_topic:=/camera/camera/color/image_raw \
+  depth_topic:=/camera/camera/aligned_depth_to_color/image_raw \
+  camera_info_topic:=/camera/camera/color/camera_info \
+  approx_sync:=true \
+  approx_sync_max_interval:=0.05 \
+  params_file:=/home/dockeruser/ros2_ws/src/rtabmap_params.yaml
 
 これで全部。もう大丈夫かな。  
 忘れたら、またいつでも見においで。
